--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crypto-ticker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://GramBam.github.io/CryptoTicker",
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
@@ -12,6 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
